# clock-app

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  README  README.autopilot  README.developers  README.developers.old  README.mergeproposal  README.mergeproposal.old  README.translations  README.unittest  clickable.json  com.ubuntu.clock_clock.url-dispatcher  manifest.json  manifest.json.in  snapcraft.yaml  translate.sh  ubuntu-clock-app.desktop.in.in  ubuntu-clock-app.json
app/: CMakeLists.txt  MainPage.qml  main.qml  ubuntu-clock-app.desktop.in  ubuntu-clock-app.desktop.in.in  ubuntu-clock-app.qml
app/alarm/: AlarmDelegate.qml  AlarmLabel.qml  AlarmList.qml  AlarmModelComponent.qml  AlarmPage.qml  AlarmRepeat.qml  AlarmSettings.qml  AlarmSettingsPage.qml  AlarmSound.qml  AlarmUtils.qml  CMakeLists.txt  EditAlarmPage.qml  MusicAppPicker.qml  SoundPeerPicker.qml
app/clock/: AddCityButton.qml  AnalogMode.qml  AnalogShadow.qml  CMakeLists.txt  Clock.qml  ClockPage.qml  DigitalMode.qml  DigitalShadow.qml  MainClock.qml  Shadow.qml  UserWorldCityList.qml
app/components/: ActionIcon.qml  AdjustableAnalogClock.qml  AlarmBottomEdge.qml  AnalogMode.qml  AnalogShadow.qml  Background.qml  CMakeLists.txt  Circle.qml  Clock.qml  ClockCircle.qml  DigitalMode.qml  DigitalShadow.qml  EmptyState.qml  ExpandableListItem.qml  FastScroll.qml  HeaderButton.qml  HeaderNavigation.qml  Information.qml  NavigationRow.qml  NestedListviewsHack.qml  PageWithBottomEdge.qml  PullToAdd.qml  Shadow.qml  SubtitledListItem.qml  TimerUtils.qml  Utils.js
app/graphics/: CMakeLists.txt  Hour_Adjust_Circle@27.xcf  Hour_Hand@27.xcf  Hour_Hand_Shadow@27.xcf  Knob@27.xcf  Minute_Adjust_Cirlce@27.xcf  Minute_Hand@27.xcf  Minute_Hand_Shadow@27.xcf  Second_Hand@27.xcf  Second_Hand_Shadow@27.xcf
app/stopwatch/: CMakeLists.txt  LapListView.qml  LapsListDelegate.qml  StopwatchFace.qml  StopwatchPage.qml  StopwatchUtils.qml
app/tests/autopilot/ubuntu-clock-app/main/: test_main.py
app/tests/autopilot/ubuntu_clock_app/main/: test_main.py
app/timer/: ActiveTimers.qml  CMakeLists.txt  TimerFace.qml  TimerListDelegate.qml  TimerListView.qml  TimerPage.qml
app/upstreamcomponents/: CMakeLists.txt  FakeHeader.qml  FastScroll.js  FastScroll.qml  ListItemWithActions.qml  MultipleSelectionListView.qml  MultipleSelectionVisualModel.qml  PageWithBottomEdge.qml  README.components
app/worldclock/: AddWorldCityButton.qml  CMakeLists.txt  UserWorldCityDelegate.qml  UserWorldCityList.qml  WorldCityList.qml  world-city-list.xml
backend/: CMakeLists.txt
backend/modules/Alarm/: backend.cpp  backend.h  qmldir  settings.cpp  settings.h  sortedalarmsmodel.cpp  sortedalarmsmodel.h  sound.cpp  sound.h
backend/modules/Alarm/Settings/: alarmsettings.cpp  alarmsettings.h  backend.cpp  backend.h  qmldir
backend/modules/Clock/: backend.cpp  qmldir  statictimezonemodel.h
backend/modules/Clock/Alarm/Settings/: alarmsettings.cpp  alarmsettings.h  backend.cpp  qmldir
backend/modules/Clock/Utility/: alarmsound.cpp  alarmsound.h  backend.cpp  customalarmsound.cpp  customalarmsound.h  filemanagement.cpp  filemanagement.h  qmldir  standardpath.cpp  standardpath.h
backend/modules/DateTime/: backend.cpp  backend.h  datetime.cpp  datetime.h  qmldir
backend/modules/GeoLocation/: backend.cpp  geolocation.cpp  geolocation.h  qmldir
backend/modules/LapHistory/: backend.cpp  history.cpp  history.h  qmldir
backend/modules/Location/: backend.cpp  location.cpp  location.h  qmldir
backend/modules/Stopwatch/: backend.cpp  backend.h  engine.cpp  engine.h  formattime.cpp  formattime.h  history.cpp  history.h  qmldir  utils.cpp  utils.h
backend/modules/Stopwatch/LapHistory/: backend.cpp  history.cpp  history.h  qmldir
backend/modules/Timer/: backend.cpp  backend.h  engine.cpp  engine.h  qmldir  timerengine.cpp  timerengine.h
backend/modules/Timezone/: backend.cpp  backend.h  generictimezonemodel.cpp  generictimezonemodel.h  jsontimezonemodel.cpp  jsontimezonemodel.h  qmldir  statictimezonemodel.cpp  statictimezonemodel.h  timezone.cpp  timezone.h  timezonemodel.cpp  timezonemodel.h  u1dbtimezonemodel.cpp  u1dbtimezonemodel.h  xmltimezonemodel.cpp  xmltimezonemodel.h  zone.cpp  zone.h
backend/modules/WorldClock/: backend.cpp  datetime.cpp  datetime.h  generictimezonemodel.cpp  generictimezonemodel.h  geolocation.cpp  geolocation.h  jsontimezonemodel.cpp  jsontimezonemodel.h  qmldir  statictimezonemodel.cpp  statictimezonemodel.h  timezonemodel.cpp  timezonemodel.h
cmake/: Click.cmake
debian/: changelog  control  copyright  rules  ubuntu-clock-app-autopilot.install  ubuntu-clock-app.install
debian/tests/: control  make-autopilot  make-test
po/: CMakeLists.txt  aa.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  com.ubuntu.clock.devel.pot  com.ubuntu.clock.pot  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  en_US.po  eo.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  fur.po  gd.po  gl.po  he.po  hu.po  id.po  it.po  km.po  kn.po  ko.po  (+31 more)
setup/gui/: ubuntu-clock-app.desktop
snap/: ubuntu-clock-app.wrapper
tests/: CMakeLists.txt
tests/autopilot/: CMakeLists.txt  run
tests/autopilot/ubuntu_clock_app/: CMakePluginParser.py  __init__.py  emulators.py  fixture_setup.py  helpers.py
tests/autopilot/ubuntu_clock_app/tests/: __init__.py  test_alarm.py  test_clock.py  test_stopwatch.py
tests/manual/2014.com.ubuntu.clock:clock-tests/: .bzrignore  manage.py
tests/manual/2014.com.ubuntu.clock:clock-tests/jobs/: alarms.pxu  clock-alarms.pxu  clock-setting.pxu  clock-stopwatch.pxu  clock-worldcity.pxu  setting.pxu  stopwatch.pxu  worldcity.pxu
tests/manual/2014.com.ubuntu.clock:clock-tests/launcher/: clock-test-cli
tests/manual/2014.com.ubuntu.clock:clock-tests/whitelists/: alarm.whitelist  clock-alarm.whitelist  clock-setting.whitelist  (+6 more)
tests/unit/: CMakeLists.txt  ClockTestCase.qml  MockClockApp.qml  Utils.qml  tst_alarm.qml  tst_alarmLabel.qml  tst_alarmRepeat.qml  tst_alarmSound.qml  tst_alarmUtils.qml  tst_hellocomponent.qml  tst_stopwatchUtils.qml  tst_worldClock.qml
